[gd_scene load_steps=4 format=3 uid="uid://dm56n3uga7s0y"]

[ext_resource type="Theme" uid="uid://mbsg4xqnedxi" path="res://theme/FlatUI4/kenneyUI-red.tres" id="1_7bxio"]
[ext_resource type="Theme" uid="uid://cjrfgel6g1bec" path="res://theme/theme_label_title.tres" id="2_8rm6v"]
[ext_resource type="Script" path="res://main_menu_screen/row_savefile.gd" id="2_bc6bx"]

[node name="row_savefile" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
size_flags_horizontal = 3
theme = ExtResource("1_7bxio")
script = ExtResource("2_bc6bx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="btn_slot" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Slot"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="lbl_level_name" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_8rm6v")
text = "level name"

[node name="lbl_time" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "time"

[connection signal="button_down" from="HBoxContainer/btn_slot" to="." method="_on_btn_slot_button_down"]
